fix(backend): corregir Booking, PolicyRepository y ProductRepository; proyecto compila y corre